--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Landing Page</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <nav>
-    <h3>Header Logo</h3>
+    <h3 class="logo">NeoForge</h3>
     <ul>
-      <li>header link one</li>
-      <li>header link two</li>
-      <li>header link three</li>
+      <li><a href="#">Explore Mods</a></li>
+      <li><a href="#">Comfort & Fit</a></li>
+      <li><a href="#">About Us</a></li>
     </ul>
   </nav>
   <div class="hero-container">
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-    <button class="hero-btn">Sign up</button>
+    <h1>Enhance Your Strength, Embrace the Future</h1>
+    <p>Advanced cybernetic arm mods engineered for performance, precision, and endurance.</p>
+    <button class="hero-btn">Get Your Mod</button>
     <img src="./odin-landing-page-imgs/hero-img.jpg" alt="hero image">
   </div>
 
@@ -25,37 +26,38 @@
   <div class="card-container">
     <div class="card">
       <img src="./odin-landing-page-imgs/card-img-1.jpg" alt="Ironclad 1 type a">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente rerum illo quae, </p>
+      <h3>Performance Boost</h3>
+      <p>Enhance your strength and agility with this high-performance mod.</p>
     </div>
     <div class="card">
       <img src="./odin-landing-page-imgs/card-img-2.jpg" alt="Ironclad 1 type a">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente rerum illo quae, </p>
+      <h3>Enhanced Comfort</h3>
+      <p>Ergonomically designed for all-day comfort and adaptability.</p>
     </div>
     <div class="card">
       <img src="./odin-landing-page-imgs/card-img-3.jpg" alt="Ironclad 1 type a">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente rerum illo quae, </p>
+      <h3>Precision Engineering</h3>
+      <p>Engineered for precise movements and seamless interaction.</p>
     </div>
     <div class="card">
       <img src="./odin-landing-page-imgs/card-img-4.jpg" alt="Ironclad 1 type a">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente rerum illo quae, </p>
+      <h3>Durability & Resilience</h3>
+      <p>Built to withstand extreme conditions and heavy usage.</p>
     </div>
   </div>
 
   <div class="quote-container">
     <div class="quote">
-      This is an inspiring quote, or a testimonial from a
-      customer. Maybe it's just filling up space, or maybe
-      people will actually read it. Who knows? All I know
-      is that it looks nice.
+      A powerful arm mod that blends with my body like it’s a part of me. Efficiency and power, right at my fingertips.
     </div>
-    <div class="quote-autor">Thor, God of Thunder</div>
+    <div class="quote-autor">Customer, Mod Enthusiast</div>
   </div>
 
   <div class="cta-container">
     <div class="cta-section">
-      <h3>Call to action! It's time!</h3>
-      <p>Sign up for our product by clicking that button nght over there!</p>
-      <button class="cta-btn">Sign up</button>
+      <h3>Upgrade Now to Join the Future!</h3>
+      <p>Step into tomorrow with cutting-edge cybernetic enhancements.</p>
+      <button class="cta-btn">Get Your Mod</button>
     </div>
   </div>
 
