--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
 </head>
 <body>
   <nav>
-    <h3 class="logo">NeoForge</h3>
-    <ul>
-      <li><a href="#">Explore Mods</a></li>
-      <li><a href="#">Comfort & Fit</a></li>
-      <li><a href="#">About Us</a></li>
-    </ul>
-  </nav>
-  <div class="hero-container">
-    <h1>Enhance Your Strength, Embrace the Future</h1>
-    <p>Advanced cybernetic arm mods engineered for performance, precision, and endurance.</p>
-    <button class="hero-btn">Get Your Mod</button>
-    <img src="./odin-landing-page-imgs/hero-img.jpg" alt="hero image">
+    <div class="container nav">
+      <h3 class="logo">NeoForge</h3>
+      <ul>
+        <li><a href="#">Explore Mods</a></li>
+        <li><a href="#">Comfort & Fit</a></li>
+        <li><a href="#">About Us</a></li>
+      </ul>
+  </div>
+</nav>
+  <div class="section dark">
+    <div class="container hero">
+      <div class="hero-content">
+        <h1>Enhance Your Strength, Embrace the Future</h1>
+        <p>Advanced cybernetic arm mods engineered for performance, precision, and endurance.</p>
+        <button class="hero-btn">Get Your Mod</button>
+      </div>
+      <img class="hero-img" src="./odin-landing-page-imgs/hero-img.jpg" alt="hero image">
+    </div>
   </div>
 
-  <h3>some random information.</h3>
-  <div class="card-container">
+
+<div class="section">
+  <h3>Discover the Future of Enhancement</h3>
+  <div class="container card">
     <div class="card">
       <img src="./odin-landing-page-imgs/card-img-1.jpg" alt="Ironclad 1 type a">
       <h3>Performance Boost</h3>
@@ -45,24 +53,29 @@
       <p>Built to withstand extreme conditions and heavy usage.</p>
     </div>
   </div>
+</div>
 
-  <div class="quote-container">
+<div class="section dark-white">
+  <div class="container quote">
     <div class="quote">
       A powerful arm mod that blends with my body like it’s a part of me. Efficiency and power, right at my fingertips.
     </div>
     <div class="quote-autor">Customer, Mod Enthusiast</div>
   </div>
+</div>
 
-  <div class="cta-container">
+<div class="section">
+  <div class="container cta">
     <div class="cta-section">
       <h3>Upgrade Now to Join the Future!</h3>
       <p>Step into tomorrow with cutting-edge cybernetic enhancements.</p>
       <button class="cta-btn">Get Your Mod</button>
     </div>
   </div>
+</div>
 
-  <div class="footer-container">
-    <div class="copyright-txt">Copyright @ Munna X Tamanna</div>
-  </div>
+<div class="section dark">
+  <div class="copyright-txt">Copyright @ Munna X Tamanna</div>
+</div>
 </body>
 </html>
