Doing a proper reset and completing the hero card and the nav section

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
 
-<div class="section">
-  <h3>Discover the Future of Enhancement</h3>
+<div class="section card">
+  <h3 id="card-info">Discover the Future of Enhancement</h3>
   <div class="container card">
-    <div class="card">
+    <div class="card bugged">
       <img src="./odin-landing-page-imgs/card-img-1.jpg" alt="Ironclad 1 type a">
       <h3>Performance Boost</h3>
       <p>Enhance your strength and agility with this high-performance mod.</p>
