Finished project whith the testomonial section and the ceta and footer

--- a/index.html
+++ b/index.html
@@ -60,21 +60,23 @@
     <div class="quote">
       A powerful arm mod that blends with my body like it’s a part of me. Efficiency and power, right at my fingertips.
     </div>
-    <div class="quote-autor">Customer, Mod Enthusiast</div>
+    <div class="quote autor">-Customer, Mod Enthusiast</div>
   </div>
 </div>
 
-<div class="section">
+<div class="section cta">
   <div class="container cta">
     <div class="cta-section">
-      <h3>Upgrade Now to Join the Future!</h3>
-      <p>Step into tomorrow with cutting-edge cybernetic enhancements.</p>
-      <button class="cta-btn">Get Your Mod</button>
+      <div class="cta-content">
+        <h3 class="cta-heading">Upgrade Now to Join the Future!</h3>
+        <p>Step into tomorrow with cutting-edge cybernetic enhancements.</p>
+      </div>
+      <button id="cta-btn">Get Your Mod</button>
     </div>
   </div>
 </div>
 
-<div class="section dark">
+<div class="section dark footer">
   <div class="copyright-txt">Copyright @ Munna X Tamanna</div>
 </div>
 </body>
